--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt": "~1.0.1",
     "grunt-contrib-concat": "~1.0.1",
     "grunt-contrib-watch": "~1.0.0",
-    "grunt-contrib-uglify": "~1.0.1"
+    "grunt-contrib-uglify": "~1.0.1",
+    "mysql": "~2.10.2"
   }
 }
