--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "build":"browserify ./main.js -o ./public/javascripts/bundle.js"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -21,6 +22,8 @@
     "grunt-contrib-concat": "~1.0.1",
     "grunt-contrib-watch": "~1.0.0",
     "grunt-contrib-uglify": "~1.0.1",
-    "mysql": "~2.10.2"
+    "mysql": "~2.10.2",
+    "browserify": "~13.0.0",
+    "uniq": "~1.0.1"
   }
 }
