successful deployment to digital ocean, changed mysql and browserify to dep, updated gitignoreand package.json

--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "build": "browserify ./public/javascripts/buttons.js ./public/javascripts/buttons2.js ./public/javascripts/buttons3.js -o ./public/javascripts/bundle.js"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -14,7 +13,9 @@
     "express": "~4.13.1",
     "less-middleware": "1.0.x",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "mysql": "~2.10.2",
+    "browserify": "~13.0.1"
   },
   "devDependencies": {
     "nodemon": "~1.9.1",
@@ -22,11 +23,10 @@
     "grunt-contrib-concat": "~1.0.1",
     "grunt-contrib-watch": "~1.0.0",
     "grunt-contrib-uglify": "~1.0.1",
-    "mysql": "~2.10.2",
-    "browserify": "~13.0.0",
     "uniq": "~1.0.1",
     "fly": "~1.2.4",
-    "grunt-contrib-clean": "~1.0.0"
+    "grunt-contrib-clean": "~1.0.0",
+    "flightplan": "~0.6.14"
   },
   "description": "Node Express project with mysql. A tool to create meals and track workouts.",
   "repository": {
