--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "less-middleware": "1.0.x",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "mysql": "~2.10.2",
     "browserify": "~13.0.1"
   },
   "devDependencies": {
@@ -26,7 +25,8 @@
     "uniq": "~1.0.1",
     "fly": "~1.2.4",
     "grunt-contrib-clean": "~1.0.0",
-    "flightplan": "~0.6.14"
+    "flightplan": "~0.6.14",
+    "mysql": "~2.10.2"
   },
   "description": "Node Express project with mysql. A tool to create meals and track workouts.",
   "repository": {
