--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mycolo",
+  "name": "eatApp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,11 +13,9 @@
     "express": "~4.13.1",
     "less-middleware": "1.0.x",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
-    "browserify": "~13.0.1"
+    "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
-    "nodemon": "~1.9.1",
     "grunt": "~1.0.1",
     "grunt-contrib-concat": "~1.0.1",
     "grunt-contrib-watch": "~1.0.0",
@@ -26,7 +24,8 @@
     "fly": "~1.2.4",
     "grunt-contrib-clean": "~1.0.0",
     "flightplan": "~0.6.14",
-    "mysql": "~2.10.2"
+    "mysql": "~2.10.2",
+    "browserify": "~13.0.1"
   },
   "description": "Node Express project with mysql. A tool to create meals and track workouts.",
   "repository": {
@@ -37,5 +36,6 @@
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/Natasha08/linuxproject/issues"
-  }
+  },
+  "main": "./bin/www"
 }
