updated .gitignore. Added sendgrid to package json, successfully test plain text email with npm sendgrid docs

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "~4.13.1",
     "less-middleware": "1.0.x",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "sendgrid": "~2.0.0"
   },
   "devDependencies": {
     "grunt": "~1.0.1",
